Fixed some dates in some months being out of bounds

--- a/css/index.scss
+++ b/css/index.scss
@@ -170,7 +170,7 @@ header {
     background: #eee;
     border-radius: 0 0 4px 4px;
     padding: 10px 0;
-    height: 300px;
+    height: 320px;
   }
 
   .week-days {
